[package]
name = "edc2svd"
version = "0.5.0"
authors = ["Stephan <kiffie@mailbox.org>"]
license = "MIT"
edition = "2018"
categories = [
    "command-line-utilities",
    "development-tools",
    "embedded",
    "hardware-support",
    "no-std",
]
keywords = [
    "PIC32",
    "PIC32MX",
    "microcontroller",
    "mips",
    "svd2rust",
]
description = "Convert register description from the EDC format to the SVD format"
readme = "README.md"
documentation = "https://github.com/kiffie/edc2svd/blob/master/README.md"
repository = "https://github.com/kiffie/edc2svd"
include = ["README.md", "/src", "LICENSE"]

[dependencies]
log = "0.4.17"
fern = "0.6.1"
getopts = "0.2"
xmltree = "0.10.3"
